<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.jhonny.detective.activity.AcercaActivity"
	tools:showIn="@layout/app_bar_acerca">

    <ImageView
        android:id="@+id/fondo_acerca"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/variable_progreso"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_fondo1" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">

			<ImageView
				android:id="@+id/acer_imageView1"
				android:layout_width="60dp"
				android:layout_height="70dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:contentDescription="@string/app_name"
				android:src="@drawable/private_detective_icon" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal" >

			<TextView
                android:id="@+id/acer_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/acer_imageView1"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/blanco" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginTop="10dp">

			<TextView
                android:id="@+id/acer_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/acer_imageView1"
                android:text="@string/version_app"
                android:textSize="15sp"
                android:textColor="@color/blanco" />

			<TextView
                android:id="@+id/acer_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@id/acer_textView2"
                android:text="@string/variable_progreso"
                android:textColor="@color/blanco"
                android:textSize="15sp"
				android:layout_marginLeft="5dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginTop="5dp">

			<TextView
                android:id="@+id/acer_textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/acer_imageView1"
                android:text="@string/fecha_creacion"
                android:textSize="15sp"
                android:textColor="@color/blanco" />

			<TextView
                android:id="@+id/acer_textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@id/acer_textView4"
                android:text="@string/variable_progreso"
                android:textColor="@color/blanco"
                android:textSize="15sp"
				android:layout_marginLeft="5dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginTop="5dp">

			<TextView
                android:id="@+id/acer_textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/acer_imageView1"
                android:text="@string/pais_creacion"
                android:textSize="15sp"
                android:textColor="@color/blanco" />

			<TextView
                android:id="@+id/acer_textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_toRightOf="@id/acer_textView8"
                android:text="@string/pais"
                android:textColor="@color/blanco"
                android:textSize="15sp"
				android:layout_marginLeft="5dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginTop="5dp">

			<TextView
                android:id="@+id/acer_textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/acer_imageView1"
				android:text="@string/label_desarrollado_por"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

			<TextView
                android:id="@+id/acer_textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acer_textView6"
				android:text="@string/label_creador"
                android:textColor="@color/blanco"
                android:textSize="15sp"
                android:textStyle="bold"
				android:layout_marginLeft="5dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_marginTop="30dp">

			<ImageView
                android:id="@+id/acer_imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/acer_textView7"
				android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_facebook" />

			<ImageView
                android:id="@+id/acer_imageView3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/acer_textView7"
				android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_google_plus"
				android:layout_marginLeft="50dp" />
		</LinearLayout>

	</LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

		<LinearLayout
		    android:id="@+id/linearLayout2"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_alignParentBottom="true"
		    android:orientation="vertical"
		    android:weightSum="1">
		    
		</LinearLayout>

	</RelativeLayout>
	
</RelativeLayout>