<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.jhonny.detective.activity.InicioActivity"
	tools:showIn="@layout/app_bar_inicio">

    <ImageView
        android:id="@+id/fondo_inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/variable_progreso"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_fondo1" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:paddingTop="0dp">

		<ImageView
			android:id="@+id/acer_imageView1"
			android:layout_width="60dp"
			android:layout_height="70dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:contentDescription="@string/app_name"
			android:src="@drawable/private_detective_icon" />

		<TextView
			android:id="@+id/acer_textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/acer_imageView1"
			android:text="@string/app_name"
			android:textSize="30sp"
			android:textStyle="bold"
			android:textColor="@color/blanco" />

		<EditText
			android:id="@+id/editText1"
			android:layout_width="300dp"
			android:layout_height="42dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:ems="10"
			android:inputType="textPassword"
			android:saveEnabled="false"
			android:hint="@string/label_contrasena"
			android:textSize="@dimen/tamano_fuente"
			android:gravity="center_vertical"
			android:layout_marginTop="30dp" />

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="300dp"
			android:layout_height="30dp"
			android:gravity="center_vertical">

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Mostrar contraseña"
				android:id="@+id/checkBox"
				android:onClick="changeTransformationMethod" />
		</LinearLayout>

		<Button
			android:id="@+id/btnEnviar"
			android:layout_width="200dp"
			android:layout_height="42dp"
			android:layout_alignParentLeft="false"
			android:layout_alignParentRight="false"
			android:layout_alignParentTop="false"
			android:onClick="accesoUsuarioRegistrado"
			android:text="@string/label_acceso_aplicacion"
			android:layout_alignParentEnd="false"
			android:layout_alignParentBottom="false"
			android:layout_below="@+id/editText1"
			android:textColor="@color/negro"
			android:textSize="@dimen/tamano_fuente"
			android:textAlignment="center"
			android:layout_centerHorizontal="true"
			android:background="@color/gris_claro"
			android:gravity="center_vertical|center_horizontal"
			android:layout_marginTop="20dp" />

	</LinearLayout>

</RelativeLayout>