<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.jhonny.detective.activity.PrincipalActivity"
	tools:showIn="@layout/app_bar_principal">

    <ImageView
        android:id="@+id/fondo_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/variable_progreso"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_fondo1" />

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
			android:layout_margin="10dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_status_gps"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variable_progreso"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente"
					android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_posiciones"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variable_progreso"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente"
					android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_estado_wifi_3g"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variable_progreso"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tamano_fuente"
					android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>

		<LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="30dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:gravity="center_vertical">

                <ImageButton
    android:id="@+id/imageButton1"
    style="android:imageButtonStyle"
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:layout_alignParentLeft="true"
                    android:contentDescription="@string/variable_progreso"
    android:onClick="muestraMapa"
    android:scaleType="centerInside"
    android:src="@mipmap/ic_posiciones" />

                <TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/imageButton1"
                    android:text="@string/label_mostrar_mapa"
    android:textColor="@color/blanco"
    android:textSize="@dimen/tamano_fuente" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:gravity="center_vertical">

                <ImageButton
    android:id="@+id/imageButton2"
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:layout_alignParentRight="true"
                    android:contentDescription="@string/variable_progreso"
    android:onClick="muestraPosiciones"
    android:scaleType="centerInside"
    android:src="@mipmap/ic_listado" />

                <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@array/lista_distancias"
    android:layout_alignParentRight="true"
    android:layout_below="@id/imageButton2"
                    android:text="@string/label_mostrar_posiciones"
    android:textColor="@color/blanco"
    android:textSize="@dimen/tamano_fuente" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:gravity="center_vertical">

                <ImageButton
    android:id="@+id/imageButton3"
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/variable_progreso"
    android:onClick="enviarPosicionesPorMail"
    android:scaleType="centerInside"
    android:src="@mipmap/ic_mail" />

                <TextView
    android:id="@+id/textView11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/imageButton3"
    android:layout_centerHorizontal="true"
    android:text="@string/label_enviar_email"
    android:textColor="@color/blanco"
    android:textSize="@dimen/tamano_fuente" />

            </LinearLayout>

        </LinearLayout>
	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
		    android:id="@+id/linearLayout2"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_alignParentBottom="true"
		    android:orientation="vertical"
		    android:weightSum="1" />
			
	</RelativeLayout>

</RelativeLayout>